# ICProject_FeatureExtraction

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.4e0d9d5  README.md  TESTE_SetupPadrao_Orientacao.bat
Sources/: CMakeLists.txt
Sources/Experiments/: CMakeLists.txt
Sources/Experiments/AnaliseGrafo/: AnaliseGrafo.cpp  AnaliseGrafo.h  CMakeLists.txt  OcorrenciaGrafo.cpp  OcorrenciaGrafo.h  Source.cpp  TEMP.cpp
Sources/Experiments/Evaluation/: CMakeLists.txt  EvaluationFunction.cpp
Sources/Experiments/Graph/: Area.cpp  Area.h  CMakeLists.txt  Funcoes_Vector_hist.cpp  Funcoes_Vector_hist.h  Graph.cpp  Graph.h  GraphConstructor.cpp  GraphConstructor.h  Histograma.h  HistogramaOcorrencia.cpp  HistogramaOcorrencia.h  Histograma_DiscrY.cpp  Histograma_DiscrY.h  Histograma_Peaks.cpp  Histograma_distancia.cpp  Histograma_distancia.h  LBP.cpp  LBP.h  Label.cpp  Label.h  MatHSV.cpp  MatHSV.h  OcorrenciaGrafo.cpp  OcorrenciaGrafo.h  Orientacao.cpp  Orientacao.h  Vertice.h
Sources/Experiments/HistogramaOcorrenciaMedia/: CMakeLists.txt  main.cpp
Sources/Experiments/Ocorrencia/: CMakeLists.txt  Ocorrencia_main.cpp
Sources/Experiments/RandomValidation/: CMakeLists.txt  Neighboor.cpp  Neighboor.h  RandomImages.cpp  RandomImages.h  RandomReader.cpp  RandomReader.h  RandomRegionReader.cpp  RandomRegionReader.h  Validation.h  main.cpp
Sources/Experiments/RecoverExperiment/: CMakeLists.txt  main.cpp
Sources/Experiments/SetupPadrao/: CMakeLists.txt  Funcoes_Vector_hist.h  Graph.cpp  Graph.h  GraphConstructor.cpp  GraphConstructor.h  Histograma.h  Histograma_DiscrY.cpp  Histograma_DiscrY.h  Histograma_Peaks.cpp  Histograma_Peaks.h  Histograma_distancia.cpp  Histograma_distancia.h  Label.cpp  Vertice.h  main.cpp
Sources/Experiments/TESTE/: CMakeLists.txt  Source_TESTE.cpp  TESTE.vcxproj  TESTE.vcxproj.filters
Sources/FeatureExtractors/: CMakeLists.txt
Sources/Utilities/: CMakeLists.txt  RandomWalk.cpp  RandomWalk.hpp
experimentos/: EXECUTA_DiscrY.bat  EXECUTA_Dist.bat
experimentos/Experimentos_matlab/: 7tree_image0.fig  imagens _ distintas.fig  imagens_tree_aleatorias.fig
experimentos/Experimentos_matlab/Grafo_arquivo/: le_arq.cpp
experimentos/Experimentos_matlab/HISTOGRAMAS/: Grass7_discrY.fig  Sky0-discrY.fig  Trees0_discrY.fig  Window19-20_discrY.fig  sky_outrasimgs.fig  teste_histogramas.mat  teste_window_tree.mat
experimentos/Experimentos_matlab/HISTOGRAMAS/comp_k/: Trees0-k4-discrY.fig
experimentos/Experiments/Disc_10-3-3-4/: ExperimentType.ini  Ocorrencia1033MATLAB.m  Resultado_FuncaoAvalicao_media.txt  Vertices1033.txt
experimentos/Experiments/Disc_18-3-3-4/: ExperimentType.ini  Ocorrencia1833MATLAB.m  Resultado_FuncaoAvalicao_media.txt  Vertices.txt
