cmake_minimum_required(VERSION 2.4)
FIND_PACKAGE(Qt5Core REQUIRED)
FIND_PACKAGE(Qt5OpenGL REQUIRED)
FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5Sql REQUIRED)
FIND_PACKAGE(Qt5WebKitWidgets REQUIRED)
FIND_PACKAGE(VTK REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE(${VTK_USE_FILE})

INCLUDE_DIRECTORIES(".")

FILE(GLOB_RECURSE Source_Files *.cpp *.h)

ADD_EXECUTABLE(SetupPadrao ${Source_Files})
#ADD_EXECUTABLE(SetupPadrao main.cpp)
TARGET_LINK_LIBRARIES(SetupPadrao FeatureExtractors ComplexNetwork Utilities Qt5::Core Qt5::Widgets Qt5::OpenGL Graph ${OpenCV_LIBS}  ${VTK_LIBRARIES})

